// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reflections: (header) should compile template with breadcrumbs and without title 1`] = `
"[BREADCRUMBS]

[TOC]

[GROUPS]"
`;

exports[`Reflections: (template) should compile a callable reflection 1`] = `
"# Interface: CallableReflection

## Callable

### CallableReflection

[SIGNATURE]

[TOC]"
`;

exports[`Reflections: (template) should compile an indexable reflection 1`] = `
"# Interface: IndexableReflection

[TOC]"
`;

exports[`Reflections: (template) should compile implemented class 1`] = `
"# Class: ImplementedClass

## Implements

- [LINK]

[TOC]

[GROUPS]"
`;

exports[`Reflections: (template) should compile module without breadcrumbs and with project title 1`] = `
"# Enumeration: EnumReflection

[TOC]

[GROUPS]"
`;
